// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyLocalizationForm handles changes 1`] = `
Array [
  "eng",
  Array [
    Object {
      "translations": Object {
        "body": "translated body",
        "subject": "translated subject",
      },
      "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
    },
  ],
]
`;

exports[`KeyLocalizationForm removes translations 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Send email
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          data-use-vue-component-wrap=""
          style="all: unset;"
        >
          <div
            class="tab size-sm tabs"
            data-passed-props="[object Object]"
            data-v-1727ddfc=""
          >
            <header
              class="tab-header"
              data-v-1727ddfc=""
            >
              <ul
                class="tab-content"
                data-v-1727ddfc=""
              >
                <li
                  class="tab-head tab-head--active"
                  data-v-1727ddfc=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-1727ddfc=""
                    style="all: unset;"
                  >
                    General
                  </div>
                </li>
                <li
                  class="tab-head"
                  data-v-1727ddfc=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-1727ddfc=""
                    style="all: unset;"
                  >
                    Body Translation
                  </div>
                </li>
              </ul>
            </header>
            <main
              class="tab-body"
              data-v-1727ddfc=""
            >
              <div
                class="tab-panel"
                data-v-1727ddfc=""
              />
            </main>
          </div>
        </div>
        <div>
          <div
            data-spec="translation-container"
          >
            <div
              class="translate_from"
              data-spec="text-to-translate"
            >
              New Sign Up
            </div>
          </div>
          <div
            class="textarea_wrapper"
          >
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-text-area sm normal textarea"
                data-passed-props="[object Object]"
                data-testid="Subject"
                data-v-4b5c6da6=""
              >
                <!---->
                <textarea
                  data-v-4b5c6da6=""
                  placeholder="Spanish Translation"
                />
                <!---->
                <!---->
              </div>
            </div>
            <div
              class="completions"
              style="display: none;"
            />
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`KeyLocalizationForm removes translations 2`] = `
Array [
  "spa",
  Array [
    Object {
      "translations": Object {},
      "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
    },
  ],
]
`;

exports[`KeyLocalizationForm renders send email 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Send email
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          data-use-vue-component-wrap=""
          style="all: unset;"
        >
          <div
            class="tab size-sm tabs"
            data-passed-props="[object Object]"
            data-v-1727ddfc=""
          >
            <header
              class="tab-header"
              data-v-1727ddfc=""
            >
              <ul
                class="tab-content"
                data-v-1727ddfc=""
              >
                <li
                  class="tab-head tab-head--active"
                  data-v-1727ddfc=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-1727ddfc=""
                    style="all: unset;"
                  >
                    General
                  </div>
                </li>
                <li
                  class="tab-head"
                  data-v-1727ddfc=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-1727ddfc=""
                    style="all: unset;"
                  >
                    Body Translation
                  </div>
                </li>
              </ul>
            </header>
            <main
              class="tab-body"
              data-v-1727ddfc=""
            >
              <div
                class="tab-panel"
                data-v-1727ddfc=""
              />
            </main>
          </div>
        </div>
        <div>
          <div
            data-spec="translation-container"
          >
            <div
              class="translate_from"
              data-spec="text-to-translate"
            >
              New Sign Up
            </div>
          </div>
          <div
            class="textarea_wrapper"
          >
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-text-area sm normal textarea"
                data-passed-props="[object Object]"
                data-testid="Subject"
                data-v-4b5c6da6=""
              >
                <!---->
                <textarea
                  data-v-4b5c6da6=""
                  placeholder="English Translation"
                />
                <!---->
                <!---->
              </div>
            </div>
            <div
              class="completions"
              style="display: none;"
            />
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
